--- a/statistics/crossings/crossings_number_revisions.html
+++ b/statistics/crossings/crossings_number_revisions.html
@@ -10,7 +10,7 @@
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other_footways Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -19,7 +19,7 @@
  
  <div class="sidebar">
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossing Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_surface.html">Crossing Surface</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_surface.html">Surface Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Surface x Smoothness</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_yr_moth_update.html">Year and Month Of Update</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_number_revisions.html">Number Of Revisions</a>
@@ -37,14 +37,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-afadbf26c096e9565fc1c7270ba0a3ba"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs", "sort": "-y", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_13", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-afadbf26c096e9565fc1c7270ba0a3ba": [{"n_revs": 1, "count": 1256, "percent": "64.74%"}, {"n_revs": 3, "count": 264, "percent": "13.61%"}, {"n_revs": 2, "count": 216, "percent": "11.13%"}, {"n_revs": 4, "count": 120, "percent": "6.19%"}, {"n_revs": 5, "count": 41, "percent": "2.11%"}, {"n_revs": 6, "count": 21, "percent": "1.08%"}, {"n_revs": 7, "count": 8, "percent": "0.41%"}, {"n_revs": 8, "count": 7, "percent": "0.36%"}, {"n_revs": 9, "count": 4, "percent": "0.21%"}, {"n_revs": 10, "count": 2, "percent": "0.1%"}, {"n_revs": 14, "count": 1, "percent": "0.05%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-afadbf26c096e9565fc1c7270ba0a3ba"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs", "sort": "-y", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_12", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Number of Revisions (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-afadbf26c096e9565fc1c7270ba0a3ba": [{"n_revs": 1, "count": 1256, "percent": "64.74%"}, {"n_revs": 3, "count": 264, "percent": "13.61%"}, {"n_revs": 2, "count": 216, "percent": "11.13%"}, {"n_revs": 4, "count": 120, "percent": "6.19%"}, {"n_revs": 5, "count": 41, "percent": "2.11%"}, {"n_revs": 6, "count": 21, "percent": "1.08%"}, {"n_revs": 7, "count": 8, "percent": "0.41%"}, {"n_revs": 8, "count": 7, "percent": "0.36%"}, {"n_revs": 9, "count": 4, "percent": "0.21%"}, {"n_revs": 10, "count": 2, "percent": "0.1%"}, {"n_revs": 14, "count": 1, "percent": "0.05%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
