--- a/statistics/kerbs/kerb_types.html
+++ b/statistics/kerbs/kerb_types.html
@@ -10,7 +10,7 @@
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other_footways Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -22,8 +22,9 @@
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_types.html">Kerb Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_tactile_paving.html">Tactile Paving Presence</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_wheelchair_access.html">Wheelchair Acessibility</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_number_revisions.html">Number Of Revisions</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_surface.html">Surface Type</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_age.html">Update Age</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_n_revs.html">Number of Revisions</a>
 </div>
 
 
@@ -38,14 +39,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-78868622dc5bb6e0b0fd4a915cce9fe8"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "kerb", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Kerb Type", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-78868622dc5bb6e0b0fd4a915cce9fe8": [{"kerb": "?", "count": 1765, "percent": "64.39%"}, {"kerb": "lowered", "count": 488, "percent": "17.8%"}, {"kerb": "raised", "count": 295, "percent": "10.76%"}, {"kerb": "flush", "count": 93, "percent": "3.39%"}, {"kerb": "no", "count": 78, "percent": "2.85%"}, {"kerb": "rolled", "count": 10, "percent": "0.36%"}, {"kerb": "regular", "count": 9, "percent": "0.33%"}, {"kerb": "normal", "count": 2, "percent": "0.07%"}, {"kerb": "lowered=no", "count": 1, "percent": "0.04%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-78868622dc5bb6e0b0fd4a915cce9fe8"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "kerb", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_11", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Kerb Type", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-78868622dc5bb6e0b0fd4a915cce9fe8": [{"kerb": "?", "count": 1765, "percent": "64.39%"}, {"kerb": "lowered", "count": 488, "percent": "17.8%"}, {"kerb": "raised", "count": 295, "percent": "10.76%"}, {"kerb": "flush", "count": 93, "percent": "3.39%"}, {"kerb": "no", "count": 78, "percent": "2.85%"}, {"kerb": "rolled", "count": 10, "percent": "0.36%"}, {"kerb": "regular", "count": 9, "percent": "0.33%"}, {"kerb": "normal", "count": 2, "percent": "0.07%"}, {"kerb": "lowered=no", "count": 1, "percent": "0.04%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
