--- a/statistics/kerbs/kerbs_number_revisions.html
+++ b/statistics/kerbs/kerbs_number_revisions.html
@@ -10,7 +10,7 @@
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other_footways Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -22,6 +22,7 @@
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_types.html">Kerb Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_tactile_paving.html">Tactile Paving Presence</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_wheelchair_access.html">Wheelchair Acessibility</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_surface.html">Surface Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_yr_moth_update.html">Year and Month Of Update</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_number_revisions.html">Number Of Revisions</a>
 </div>
@@ -38,14 +39,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-9ea83947818e56318bcc52a53f223071"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs", "sort": "-y", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_19", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Number Of Revisions (Kerbs)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-9ea83947818e56318bcc52a53f223071": [{"n_revs": 1, "count": 1832, "percent": "67.4%"}, {"n_revs": 2, "count": 492, "percent": "18.1%"}, {"n_revs": 3, "count": 182, "percent": "6.7%"}, {"n_revs": 4, "count": 107, "percent": "3.94%"}, {"n_revs": 5, "count": 44, "percent": "1.62%"}, {"n_revs": 6, "count": 30, "percent": "1.1%"}, {"n_revs": 7, "count": 19, "percent": "0.7%"}, {"n_revs": 11, "count": 3, "percent": "0.11%"}, {"n_revs": 8, "count": 2, "percent": "0.07%"}, {"n_revs": 9, "count": 2, "percent": "0.07%"}, {"n_revs": 21, "count": 1, "percent": "0.04%"}, {"n_revs": 19, "count": 1, "percent": "0.04%"}, {"n_revs": 12, "count": 1, "percent": "0.04%"}, {"n_revs": 30, "count": 1, "percent": "0.04%"}, {"n_revs": 10, "count": 1, "percent": "0.04%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-9ea83947818e56318bcc52a53f223071"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs", "sort": "-y", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_19", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Number Of Revisions (Kerbs)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-9ea83947818e56318bcc52a53f223071": [{"n_revs": 1, "count": 1832, "percent": "67.4%"}, {"n_revs": 2, "count": 492, "percent": "18.1%"}, {"n_revs": 3, "count": 182, "percent": "6.7%"}, {"n_revs": 4, "count": 107, "percent": "3.94%"}, {"n_revs": 5, "count": 44, "percent": "1.62%"}, {"n_revs": 6, "count": 30, "percent": "1.1%"}, {"n_revs": 7, "count": 19, "percent": "0.7%"}, {"n_revs": 11, "count": 3, "percent": "0.11%"}, {"n_revs": 8, "count": 2, "percent": "0.07%"}, {"n_revs": 9, "count": 2, "percent": "0.07%"}, {"n_revs": 21, "count": 1, "percent": "0.04%"}, {"n_revs": 19, "count": 1, "percent": "0.04%"}, {"n_revs": 12, "count": 1, "percent": "0.04%"}, {"n_revs": 30, "count": 1, "percent": "0.04%"}, {"n_revs": 10, "count": 1, "percent": "0.04%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
