--- a/statistics/other_footways/other_footways_surface.html
+++ b/statistics/other_footways/other_footways_surface.html
@@ -10,7 +10,7 @@
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other_footways Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -19,10 +19,10 @@
  
  <div class="sidebar">
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Incline Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Other Footways Surface</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Surface Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_number_revisions.html">Number Of Revisions</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_age.html">Update Age</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_n_revs.html">Number of Revisions</a>
 </div>
 
 
@@ -37,14 +37,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-aec5c6f4c01b63edf2da628f273d41a4"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "surface", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_21", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "other_footways Surface", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-aec5c6f4c01b63edf2da628f273d41a4": [{"surface": "?", "count": 4197, "percent": "63.26%"}, {"surface": "asphalt", "count": 1187, "percent": "17.89%"}, {"surface": "sett", "count": 386, "percent": "5.82%"}, {"surface": "concrete", "count": 272, "percent": "4.1%"}, {"surface": "paving_stones", "count": 165, "percent": "2.49%"}, {"surface": "paved", "count": 108, "percent": "1.63%"}, {"surface": "concrete:plates", "count": 64, "percent": "0.96%"}, {"surface": "unpaved", "count": 60, "percent": "0.9%"}, {"surface": "wood", "count": 54, "percent": "0.81%"}, {"surface": "ground", "count": 34, "percent": "0.51%"}, {"surface": "gravel", "count": 26, "percent": "0.39%"}, {"surface": "metal", "count": 20, "percent": "0.3%"}, {"surface": "dirt", "count": 13, "percent": "0.2%"}, {"surface": "grass", "count": 10, "percent": "0.15%"}, {"surface": "rock", "count": 9, "percent": "0.14%"}, {"surface": "cobblestone", "count": 9, "percent": "0.14%"}, {"surface": "fine_gravel", "count": 6, "percent": "0.09%"}, {"surface": "concrete:lanes", "count": 5, "percent": "0.08%"}, {"surface": "compacted", "count": 3, "percent": "0.05%"}, {"surface": "grass_paver", "count": 1, "percent": "0.02%"}, {"surface": "pebblestone", "count": 1, "percent": "0.02%"}, {"surface": "mud", "count": 1, "percent": "0.02%"}, {"surface": "Petit_Pav\u00ea", "count": 1, "percent": "0.02%"}, {"surface": "unhewn_cobblestone", "count": 1, "percent": "0.02%"}, {"surface": "sand", "count": 1, "percent": "0.02%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-f4405e95ecdbd693a8467bbe402f4f4c"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "surface type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "surface type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_16", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Other Footways Surface Type", "transform": [{"filter": "include_filter_out_opt || datum['surface type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-f4405e95ecdbd693a8467bbe402f4f4c": [{"surface type": "?", "feature count": 4197, "length(km)": 351.5627010564327}, {"surface type": "Petit_Pav\u00ea", "feature count": 1, "length(km)": 0.0006198559024402606}, {"surface type": "asphalt", "feature count": 1187, "length(km)": 151.4679404075176}, {"surface type": "cobblestone", "feature count": 9, "length(km)": 1.0059703108491223}, {"surface type": "compacted", "feature count": 3, "length(km)": 0.3911297670137477}, {"surface type": "concrete", "feature count": 272, "length(km)": 10.750404269525456}, {"surface type": "concrete:lanes", "feature count": 5, "length(km)": 0.24816753019284665}, {"surface type": "concrete:plates", "feature count": 64, "length(km)": 1.9373463591061104}, {"surface type": "dirt", "feature count": 13, "length(km)": 1.3678977205158895}, {"surface type": "fine_gravel", "feature count": 6, "length(km)": 0.4179608025867117}, {"surface type": "grass", "feature count": 10, "length(km)": 1.2788001206413209}, {"surface type": "grass_paver", "feature count": 1, "length(km)": 0.022934644688504806}, {"surface type": "gravel", "feature count": 26, "length(km)": 2.7156110275173853}, {"surface type": "ground", "feature count": 34, "length(km)": 6.163455527647434}, {"surface type": "metal", "feature count": 20, "length(km)": 1.0003207872101254}, {"surface type": "mud", "feature count": 1, "length(km)": 0.3444615251821609}, {"surface type": "paved", "feature count": 108, "length(km)": 9.631635538919618}, {"surface type": "paving_stones", "feature count": 165, "length(km)": 10.79602943751275}, {"surface type": "pebblestone", "feature count": 1, "length(km)": 0.03584967868000859}, {"surface type": "rock", "feature count": 9, "length(km)": 0.6516734972136212}, {"surface type": "sand", "feature count": 1, "length(km)": 0.05544750822000682}, {"surface type": "sett", "feature count": 386, "length(km)": 23.626940854142905}, {"surface type": "unhewn_cobblestone", "feature count": 1, "length(km)": 0.21065414021715198}, {"surface type": "unpaved", "feature count": 60, "length(km)": 10.014417800400064}, {"surface type": "wood", "feature count": 54, "length(km)": 1.3139766675489941}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
