--- a/statistics/other_footways/other_footways_subcategory.html
+++ b/statistics/other_footways/other_footways_subcategory.html
@@ -21,6 +21,7 @@
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Incline Values</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Surface Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_smoothness_x_surface.html">Surface x Smoothness</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_length.html">Length (km)</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_age.html">Update Age</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_n_revs.html">Number of Revisions</a>
 </div>
@@ -37,14 +38,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-db5cad1c93ea23ba019d1ac8b800b85b"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "oswm_footway type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "oswm_footway type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sub-category (Layer)", "transform": [{"filter": "include_filter_out_opt || datum['oswm_footway type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-db5cad1c93ea23ba019d1ac8b800b85b": [{"oswm_footway type": "informal_footways", "feature count": 180, "length(km)": 32.45945204772031}, {"oswm_footway type": "main_footways", "feature count": 5304, "length(km)": 426.0135919798506}, {"oswm_footway type": "pedestrian_areas", "feature count": 49, "length(km)": 19.814349946333586}, {"oswm_footway type": "potential_footways", "feature count": 741, "length(km)": 100.00082363560904}, {"oswm_footway type": "stairways", "feature count": 315, "length(km)": 4.639557590552233}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-a839abe1208c368df391b40a9e1463ed"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "oswm_footway type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "oswm_footway type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sub-category (Layer)", "transform": [{"filter": "include_filter_out_opt || datum['oswm_footway type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-a839abe1208c368df391b40a9e1463ed": [{"oswm_footway type": "informal_footways", "feature count": 180, "length(km)": 32.45945204772}, {"oswm_footway type": "main_footways", "feature count": 5304, "length(km)": 426.01359197984823}, {"oswm_footway type": "pedestrian_areas", "feature count": 49, "length(km)": 19.8143499463349}, {"oswm_footway type": "potential_footways", "feature count": 741, "length(km)": 100.00082363560861}, {"oswm_footway type": "stairways", "feature count": 315, "length(km)": 4.639557590552573}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
